[package]
name = "process_analyzer"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
sha2 = "0.9"
md5 = "0.7.0"
sha1 = "0.10.5"
chrono = "0.4"
cfg-if = "1.0"
windows = { version = "0.57.0", features = ["Win32_Foundation", "Win32_System_Diagnostics_Debug", "Win32_System_Threading", "Win32_Storage_FileSystem","Win32_System_Kernel","Win32_System_Memory"] }
serde_json = "1.0"